--- a/module_3.ipynb
+++ b/module_3.ipynb
@@ -19,19 +19,234 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a5d1449",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "fcf0eb12",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "things = [\"mozzarella\", \"cinderella\", \"salmonella\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e0409b4",
+   "metadata": {},
+   "source": [
+    "### 7.5 Capitalize the element in things that refers to a person and then print the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "06e72525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mozzarella', 'Cinderella', 'salmonella']\n"
+     ]
+    }
+   ],
+   "source": [
+    "things = [\"mozzarella\", \"cinderella\", \"salmonella\"]\n",
+    "things[1] = things[1].capitalize()\n",
+    "print(things)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a52e76",
+   "metadata": {},
+   "source": [
+    "### 7.6 Make the cheesy element of things all uppercase and print the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f0a1fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MOZZARELLA', 'cinderella', 'salmonella']\n"
+     ]
+    }
+   ],
+   "source": [
+    "things = [\"mozzarella\", \"cinderella\", \"salmonella\"]\n",
+    "things[0] = things[0].upper()\n",
+    "print(things)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a29394bd",
+   "metadata": {},
+   "source": [
+    "### 7.7 Delete the disease element from things, collect your Nobel Prize, and print the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87befd3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MOZZARELLA', 'cinderella']\n"
+     ]
+    }
+   ],
+   "source": [
+    "del things[2]\n",
+    "print(things)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0efe6808",
+   "metadata": {},
+   "source": [
+    "### 7.8 Create a list called surprise with the elements \"Groucho\", \"Chico\", and \"Harpo\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa35196e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Groucho', 'Chico', 'Harpo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "surprise = [\"Groucho\", \"Chico\", \"Harpo\"]\n",
+    "print(surprise)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "611ddbd4",
+   "metadata": {},
+   "source": [
+    "### 7.9 Lowercase the last element of surprise, reverse it, and then capitalize it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9b8e179a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oprah\n"
+     ]
+    }
+   ],
+   "source": [
+    "last = surprise[-1].lower()   # \"harpo\"\n",
+    "last = last[::-1]             # \"oprah\"\n",
+    "last = last.capitalize()      # \"Oprah\"\n",
+    "print(last)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acac4fa",
+   "metadata": {},
+   "source": [
+    "## Chapter 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f51956",
+   "metadata": {},
+   "source": [
+    "### 9.1 Define a function called good() that returns the following list: ['Harry', 'Ron', 'Hermione']."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6415fe89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def good():\n",
+    "    return ['Harry', 'Ron', 'Hermione']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33731e7f",
+   "metadata": {},
+   "source": [
+    "### 9.2  Define a generator function called get_odds() that returns the odd numbers from range(10). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fc4d8990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_odds():\n",
+    "    for num in range(10):\n",
+    "        if num % 2 == 1:\n",
+    "            yield num\n",
+    "\n",
+    "count = 0\n",
+    "for value in get_odds():\n",
+    "    count += 1\n",
+    "    if count == 3:\n",
+    "        print(value)\n",
+    "        break\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
